--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-geb-base.gradle
@@ -85,7 +85,7 @@ dependencies {
         transitive = false
     }
 
-    api libs.managed.slf4j
+    api libs.managed.slf4j.api
     compileOnly libs.caffeine
     compileOnly libs.bundles.asm
 
