--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compileOnly libs.caffeine
     compileOnly libs.kotlinx.coroutines.core
     compileOnly libs.kotlinx.coroutines.reactive
-    testImplementation libs.managed.logback
+    testImplementation libs.managed.logback.classic
     testImplementation libs.snakeyaml
     testAnnotationProcessor project(":inject-java")
     testImplementation libs.jsr107
