--- a/test-suite-geb/build.gradle
+++ b/test-suite-geb/build.gradle
@@ -17,6 +17,6 @@ dependencies {
     testImplementation project(':http')
     testImplementation project(':http-server-netty')
 
-    testRuntimeOnly libs.managed.logback
+    testRuntimeOnly libs.managed.logback.classic
     testImplementation project(":jackson-databind")
 }
