--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compileOnly libs.kotlinx.coroutines.core
     compileOnly libs.kotlinx.coroutines.reactive
     testImplementation libs.logback
-    testImplementation libs.snakeyaml
+    testImplementation libs.managed.snakeyaml
     testAnnotationProcessor project(":inject-java")
     testImplementation libs.jsr107
     testImplementation libs.jcache
