Exclude module descriptors from the shaded JAR
Fixes #8402

--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -260,6 +260,7 @@ ext.extraPomInfo = {
                                             exclude "META-INF/*.SF"
                                             exclude "META-INF/*.DSA"
                                             exclude "META-INF/*.RSA"
+                                            exclude "module-info.class"
                                         }
                                     }
                                 }
