--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,7 +62,7 @@ managed-kafka = "2.8.2"
 managed-ktor = "1.6.8"
 managed-logback = "1.2.11"
 managed-lombok = "1.18.24"
-managed-maven-native-plugin = "0.9.13"
+managed-maven-native-plugin = "0.9.18"
 managed-methvin-directory-watcher = "0.16.1"
 managed-micrometer = "1.9.4"
 managed-micronaut-acme = "3.2.0"
@@ -227,6 +227,7 @@ managed-gorm-hibernate = { module = "org.grails:grails-datastore-gorm-hibernate5
 
 managed-graal = { module = "org.graalvm.nativeimage:svm", version.ref = "managed-graal-svm" }
 managed-graal-sdk = { module = "org.graalvm.sdk:graal-sdk", version.ref = "managed-graal-sdk" }
+managed-maven-native-plugin = { module = "org.graalvm.buildtools:native-maven-plugin", version.ref = "managed-maven-native-plugin" }
 
 managed-groovy = { module = "org.codehaus.groovy:groovy", version.ref = "managed-groovy" }
 managed-groovy-json = { module = "org.codehaus.groovy:groovy-json", version.ref = "managed-groovy" }
