temporarily disable checkstyle until fixed with Java 17

--- a/inject/build.gradle
+++ b/inject/build.gradle
@@ -37,3 +37,5 @@ tasks.withType(Test) {
         jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
     }
 }
+
+checkstyleMain.enabled = false
