Upgrade to Micronaut Build 6.1.1
and fix the checkstyle issues which are now reported as errors.

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
@@ -60,7 +60,11 @@ tasks.withType(Jar).configureEach {
 
 configurations.all {
     resolutionStrategy.dependencySubstitution {
-        substitute module("io.micronaut:micronaut-inject-groovy") using project(":inject-groovy") because "we want to test with what we're building"
+        rootProject.subprojects.each {
+            if (!it.name.startsWith('test-')) {
+                substitute module("io.micronaut:micronaut-${it.name}") using project(":${it.name}") because "we want to test with what we're building"
+            }
+        }
     }
 }
 
