--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "io.micronaut.build.internal.convention-library"
     id "org.jetbrains.kotlin.jvm"
-    id "com.google.devtools.ksp" version "1.6.10-1.0.2"
+    id "com.google.devtools.ksp" version "1.8.0-Beta-1.0.8"
 
 }
 
@@ -18,8 +18,7 @@ dependencies {
     if (!JavaVersion.current().isJava9Compatible()) {
         api files(org.gradle.internal.jvm.Jvm.current().toolsJar)
     }
-    kspTest(project)
-    kspTest libs.bundles.asm
+//    kspTest(project)
     testImplementation("com.github.tschuchortdev:kotlin-compile-testing-ksp:1.4.9")
     testImplementation project(":jackson-databind")
     testImplementation libs.kotlin.stdlib
