--- a/http/build.gradle
+++ b/http/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testAnnotationProcessor project(":inject-java")
     testImplementation project(":inject")
     testImplementation project(":runtime")
+    testImplementation(libs.managed.logback)
 }
 
 tasks.named("compileKotlin") {
