--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -138,7 +138,7 @@ managed-spock = "2.0-groovy-3.0"
 managed-spotbugs = "4.7.1"
 managed-spring = "5.3.23"
 managed-springboot = "2.7.0"
-managed-swagger = ""
+managed-swagger = "2.2.3"
 managed-validation = "2.0.1.Final"
 managed-testcontainers = "1.17.5"
 managed-snakeyaml = "1.33"
