--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -76,6 +76,7 @@ managed-reactor = "3.4.24"
 managed-slf4j = "2.0.4"
 managed-snakeyaml = "1.33"
 managed-validation = "2.0.1.Final"
+managed-java-parser-core = "3.24.7"
 managed-ksp = "1.8.0-Beta-1.0.8"
 micronaut-docs = "2.0.0"
 
