fix array generics

--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     if (!JavaVersion.current().isJava9Compatible()) {
         api files(org.gradle.internal.jvm.Jvm.current().toolsJar)
     }
-//    kspTest(project)
+    kspTest(project)
     testImplementation project(":jackson-databind")
     testImplementation project(":inject-kotlin-test")
     testImplementation libs.kotlin.stdlib
@@ -50,8 +50,8 @@ tasks.named("compileTestGroovy") {
 
 tasks.named("test") {
     classpath += files(tasks.compileTestKotlin)
-    testLogging {
-        showStandardStreams = true
-    }
+//    testLogging {
+//        showStandardStreams = true
+//    }
 }
 
