get more tests running

--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -53,5 +53,7 @@ tasks.named("test") {
 //    testLogging {
 //        showStandardStreams = true
 //    }
+    forkEvery = 30
+    maxParallelForks = 4
 }
 
