--- a/inject-java/build.gradle
+++ b/inject-java/build.gradle
@@ -34,6 +34,8 @@ dependencies {
         testImplementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
     }
     testImplementation libs.micrometer.core
+    testImplementation(libs.micronaut.session)
+    testImplementation(project(":http-server"))
     testImplementation project(":validation")
     testImplementation project(":jackson-databind")
     testImplementation libs.junit.jupiter.api
