--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compileOnly project(":websocket")
     compileOnly libs.kotlin.stdlib
     compileOnly libs.managed.netty.transport.native.unix.common
+    compileOnly libs.managed.netty.incubator.codec.http3
 
     testCompileOnly project(":inject-groovy")
     testCompileOnly(libs.jetbrains.annotations)
@@ -38,6 +39,7 @@ dependencies {
     testImplementation project(":inject-java-test")
     testImplementation project(":http-client")
     testImplementation libs.spotbugs
+    testImplementation libs.managed.netty.incubator.codec.http3
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
     }
