--- a/http-client/build.gradle
+++ b/http-client/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     api project(":http-netty")
     api libs.managed.netty.handler.proxy
 
+    compileOnly libs.managed.netty.incubator.codec.http3
+
     testAnnotationProcessor project(":validation")
     testAnnotationProcessor project(":inject-java")
 
