--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id "io.micronaut.build.internal.convention-test-library"
     id 'io.micronaut.build.internal.functional-test'
     id 'java-test-fixtures'
+    id 'io.micronaut.build.internal.convention-geb-base'
 }
 
 micronautBuild {
