--- a/settings.gradle
+++ b/settings.gradle
@@ -70,6 +70,7 @@ include "test-suite-geb"
 include "test-suite-helper"
 include "test-suite-javax-inject"
 include "test-suite-jakarta-inject-bean-import"
+include "test-suite-http-server-tck-javanet"
 include "test-suite-http-server-tck-netty"
 include "test-suite-kotlin"
 include "test-suite-graal"
