--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -82,3 +82,12 @@ tasks.named("compileTestKotlin") {
 tasks.named("test") {
     useJUnitPlatform()
 }
+
+tasks.withType(Test).configureEach {
+    distribution {
+        enabled = false
+    }
+    predictiveSelection {
+        enabled = false
+    }
+}
