--- a/parent/build.gradle
+++ b/parent/build.gradle
@@ -51,9 +51,9 @@ ext.extraPomInfo = {
         'function-maven-plugin.version'('0.9.8')
         'jib-maven-plugin.version'('3.1.4')
         'maven-compiler-plugin.version'('3.10.1') // Override actual Maven compiler version (3.1) because some bugs cause annotation processors doesn't work well
-        'maven-deploy-plugin.version'('3.0.0-M2')
+        'maven-deploy-plugin.version'('3.0.0')
         'maven-failsafe-plugin.version'('2.22.2') // Override actual Maven surefire and failsafe version (2.12) to get native support for executing tests on the JUnit Platform (JUnit 5)
-        'maven-install-plugin.version'('3.0.0-M1')
+        'maven-install-plugin.version'('3.1.0')
         'maven-jar-plugin.version'('3.2.2')
         'maven-resources-plugin.version'('3.2.0')
         'maven-shade-plugin.version'('3.2.4')
