--- a/validation/build.gradle
+++ b/validation/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
 }
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+//compileTestGroovy.groovyOptions.fork = true
+
 
 spotless {
     java {
