--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -19,11 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['17']
-        graalvm: ['latest', 'dev']
+        java: [ '17', '19']
+        graalvm: [ 'latest' ]
         include:
-          - graalvm: 'latest'
-            java: '11'
+          - graalvm: 'dev'
+            java: '19'
     steps:
        # https://github.com/actions/virtual-environments/issues/709
       - name: Free disk space
