--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '17']
+        java: ['11', '17']
         graalvm: [ 'latest' ]
     steps:
        # https://github.com/actions/virtual-environments/issues/709
