--- a/.github/workflows/corretto.yml
+++ b/.github/workflows/corretto.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11']
+        java: ['8', '11', '17']
     container: amazoncorretto:${{ matrix.java }}
     steps:
     - name: Display Java and Linux version
@@ -30,6 +30,8 @@ jobs:
           ${{ runner.os }}-micronaut-core-wrapper-
     - name: Build with Gradle
       env:
+        GH_TOKEN_PUBLIC_REPOS_READONLY: ${{ secrets.GH_TOKEN_PUBLIC_REPOS_READONLY }}
+        GH_USERNAME: ${{ secrets.GH_USERNAME }}
         GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
         GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
         GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
