Add tests for #8678 and #8679

--- a/settings.gradle
+++ b/settings.gradle
@@ -69,6 +69,7 @@ include "test-suite-kotlin"
 include "test-suite-graal"
 include "test-suite-groovy"
 include "test-suite-groovy"
+include "test-suite-logback"
 include "test-utils"
 
 // benchmarks
