--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,7 +64,7 @@ managed-logback = "1.2.11"
 managed-lombok = "1.18.24"
 managed-maven-native-plugin = "0.9.19"
 managed-methvin-directory-watcher = "0.16.1"
-managed-micrometer = ""
+managed-micrometer = "1.9.4"
 managed-micronaut-acme = "3.2.0"
 managed-micronaut-aot = "1.1.1"
 managed-micronaut-aws = "3.10.5"
