--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,7 @@ include "http-netty"
 include "http-server"
 include "http-server-tck"
 include "http-server-netty"
+include "http-tck"
 include "http-validation"
 include "inject"
 include "inject-groovy"
