--- a/.github/workflows/corretto.yml
+++ b/.github/workflows/corretto.yml
@@ -2,7 +2,8 @@ name: Corretto CI
 on:
   push:
     branches:
-      - master
+      - '[1-9]+.[0-9]+.x'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
