Correct messaging event publishing

--- a/messaging/build.gradle
+++ b/messaging/build.gradle
@@ -2,6 +2,12 @@ plugins {
     id "io.micronaut.build.internal.convention-library"
 }
 
+micronautBuild {
+    core {
+        usesMicronautTestSpock()
+    }
+}
+
 dependencies {
     annotationProcessor project(":inject-java")
     api project(":context")
