--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -124,6 +124,7 @@ httpServer:
     threadPools:
       title: Configuring Server Thread Pools
       blockingOperations: Blocking Operations
+      virtualThreads: Virtual Threads
       atBlocking: '@Blocking'
     nettyClientPipeline: Configuring the Netty Client Pipeline
     nettyServerPipeline: Configuring the Netty Server Pipeline
