--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,9 +32,8 @@ javax-el-impl = "2.2.1-b05"
 jcache = "1.1.1"
 junit5 = "5.9.1"
 junit-platform="1.9.1"
-kotlin = "1.7.20"
+kotlin = "1.8.10"
 kotlin-coroutines = "1.6.4"
-ksp-testing = "1.4.9"
 ktor = "1.6.8"
 managed-logback = "1.4.5"
 logbook-netty = "2.14.0"
@@ -75,7 +74,7 @@ managed-slf4j = "2.0.4"
 managed-snakeyaml = "1.33"
 managed-validation = "2.0.1.Final"
 managed-java-parser-core = "3.24.9"
-managed-ksp = "1.8.0-Beta-1.0.8"
+managed-ksp = "1.8.0-1.0.9"
 micronaut-docs = "2.0.0"
 
 [libraries]
@@ -206,8 +205,6 @@ kotlinx-coroutines-reactive = { module = "org.jetbrains.kotlinx:kotlinx-coroutin
 kotlinx-coroutines-rx2 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx2", version.ref = "kotlin-coroutines" }
 kotlinx-coroutines-slf4j = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-slf4j", version.ref = "kotlin-coroutines" }
 kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "kotlin-coroutines" }
-
-ksp-testing = { module = "com.github.tschuchortdev:kotlin-compile-testing-ksp", version.ref = "ksp-testing" }
 
 log4j = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
 
