--- a/inject-kotlin-test/build.gradle
+++ b/inject-kotlin-test/build.gradle
@@ -12,7 +12,11 @@ dependencies {
     if (!JavaVersion.current().isJava9Compatible()) {
         api files(org.gradle.internal.jvm.Jvm.current().toolsJar)
     }
-    api(libs.ksp.testing)
+    api(libs.managed.ksp.api)
+    api(libs.managed.ksp)
+    implementation(libs.kotlin.compiler.embeddable)
+    implementation "com.squareup.okio:okio:3.2.0"
+    implementation "io.github.classgraph:classgraph:4.8.149"
     testImplementation libs.managed.validation
     testImplementation libs.javax.persistence
     testImplementation project(":runtime")
