--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -8,6 +8,7 @@ plugins {
 micronautBuild {
     core {
         usesMicronautTest()
+        usesMicronautTestKotest()
     }
 }
 
@@ -34,7 +35,8 @@ dependencies {
     testImplementation libs.kotlinx.coroutines.core
     testImplementation libs.kotlinx.coroutines.jdk8
     testImplementation libs.kotlinx.coroutines.rx2
-
+    testImplementation libs.micronaut.test.junit5
+    testImplementation libs.kotlin.kotest.junit5
 }
 
 afterEvaluate {
