Add Http Server Function sub-project

--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ include "http-client-core"
 include "http-client"
 include "http-netty"
 include "http-server"
+include "http-server-function"
 include "http-server-tck"
 include "http-server-netty"
 include "http-validation"
