--- a/core/src/main/resources/META-INF/native-image/io.micronaut/micronaut-core/native-image.properties
+++ b/core/src/main/resources/META-INF/native-image/io.micronaut/micronaut-core/native-image.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-Args = --initialize-at-run-time=io.micronaut.core.io.socket.SocketUtils
+Args = --initialize-at-run-time=io.micronaut.core.io.socket.SocketUtils --features=io.micronaut.core.graal.ServiceLoaderFeature
