refactor: prefix tck implementations with tes-suite
since these are modules which should not be published as artifacts and are just tests.

--- a/settings.gradle
+++ b/settings.gradle
@@ -38,8 +38,8 @@ include "http-client-core"
 include "http-client"
 include "http-client-javanet"
 include "http-client-tck"
-include "http-client-tck-netty"
-include "http-client-tck-javanet"
+include "test-suite-http-client-tck-netty"
+include "test-suite-http-client-tck-javanet"
 include "http-netty"
 include "http-server"
 include "http-server-tck"
