--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ if (System.getenv("SONAR_TOKEN") != null) {
         "**/graal/ServiceLoaderInitialization.java",
         "**/graal/ServiceLoaderInitialization.java",
         "**/DirectoryClassWriterOutputVisitor.java",
-        "**/GroovyClassWriterOutputVisitor.java"
+        "**/GroovyClassWriterOutputVisitor.java",
+        "**/tck/**",
+        "**/test/support/**"
     ]
     sonarqube {
         properties {
